<resources>
    <string name="app_name">GDC2</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="SignUp">SignUp</string>
    <string name="select_birth_date">Select Birth Date</string>
    <string name="email">Email</string>
    <string name="PasswordRepeat">Password Repeat</string>
    <string name="login">Login</string>
</resources>